<resources>
    <string name="app_name">Remindy</string>
    <string name="activity_about_toolbar_title">About</string>
    <string name="activity_about_app_name">Remindy</string>
    <string name="activity_about_version">Version %1$s</string>
    <string name="activity_about_author">Alejandro Bicelis %1$d</string>
    <string name="activity_about_market_link">Rate app</string>
    <string name="activity_about_github_link">View GitHub Project</string>
    <string name="activity_about_website_link">www.alejandrobicelis.com.ve</string>
    <string name="activity_home_toolbar_title">Tasks</string>
    <string name="activity_home_tab_unprogrammed">UNPROGRAMMED</string>
    <string name="activity_home_tab_location_based">LOCATION-BASED</string>
    <string name="activity_home_tab_programmed">PROGRAMMED</string>
    <string name="activity_home_tab_done">DONE</string>
    <string name="menu_home_action_settings">Settings</string>
    <string name="menu_home_action_sort">Sort</string>
    <string name="menu_home_action_about">About</string>
    <string name="menu_home_action_rate">Rate app</string>
    <string name="activity_task_title">Task detail</string>
    <string name="menu_activity_task_action_edit">Edit</string>
    <string name="menu_activity_task_action_delete">Delete</string>
    <string name="menu_activity_task_subtitle_attachments">Attachments</string>
    <string name="activity_task_snackbar_error_no_task">No task specified. Closing</string>
    <string name="activity_task_snackbar_error_deleting_task">Could not delete task</string>
    <string name="activity_task_snackbar_error_updating_task">Could not update task</string>
    <string name="activity_task_snackbar_task_deleted_successfully">Task deleted successfully</string>
    <string name="fragment_location_based_reminder_detail_snackbar_error_no_reminder">No reminder specified. Closing</string>
    <string name="activity_task_overdue_since">Overdue since %1$s at %2$s</string>
    <string name="activity_task_dialog_delete_title">Delete task?</string>
    <string name="activity_task_dialog_delete_message">Are you sure you want to delete this task? This action cannot be undo</string>
    <string name="activity_task_dialog_delete_positive">Delete</string>
    <string name="activity_task_dialog_delete_negative">Cancel</string>
    <string name="fragment_detail_reminder_one_time_date_title">Date</string>
    <string name="fragment_detail_reminder_one_time_time_title">Time</string>
    <string name="fragment_detail_reminder_repeating_date_title">Start</string>
    <string name="fragment_detail_reminder_repeating_time_title">Time</string>
    <string name="fragment_detail_reminder_repeating_repeat_title">Repeat</string>
    <string name="fragment_detail_reminder_repeating_next_title">Next event</string>
    <string name="activity_place_list_title">Manage Places</string>
    <string name="activity_place_list_no_items">There are no places. Click the + button to add one</string>
    <string name="activity_place_title_new">New Place</string>
    <string name="activity_place_title_edit">Edit Place</string>
    <string name="menu_activity_place_action_delete">Delete</string>
    <string name="menu_activity_place_action_save">Save</string>
    <string name="activity_place_snackbar_help">Tip: Long-press map to add a point</string>
    <string name="activity_place_snackbar_save_succesful">Place successfully saved</string>
    <string name="activity_place_snackbar_edit_succesful">Place successfully updated</string>
    <string name="activity_place_snackbar_delete_succesful">Place successfully deleted</string>
    <string name="activity_place_snackbar_error_saving">There was an error saving the Place</string>
    <string name="activity_place_snackbar_error_deleting">There was an error deleting the Place</string>
    <string name="activity_place_snackbar_error_no_place">No Place. Search it or long-click map</string>
    <string name="activity_place_snackbar_error_no_alias">Please set an Alias for the Place</string>
    <string name="activity_place_snackbar_fetching_address">Fetching address of selected place</string>
    <string name="activity_place_snackbar_error_fetching_address">There was an error fetching the address</string>
    <string name="activity_place_dialog_exit_title">Go back?</string>
    <string name="activity_place_dialog_exit_message">Go back and discard changes?</string>
    <string name="activity_place_dialog_exit_positive">Yes</string>
    <string name="activity_place_dialog_exit_negative">Cancel</string>
    <string name="activity_place_dialog_delete_with_associated_tasks_title">Delete Place?</string>
    <string name="activity_place_dialog_delete_with_associated_tasks_message">WARNING: This place is currently used by some Tasks, delete anyway?</string>
    <string name="activity_place_dialog_delete_with_associated_tasks_positive">Delete</string>
    <string name="activity_place_dialog_delete_with_associated_tasks_negative">Cancel</string>
    <string name="activity_place_dialog_delete_title">Delete Place?</string>
    <string name="activity_place_dialog_delete_message">Are you sure you want to delete this Place?</string>
    <string name="activity_place_dialog_delete_positive">Delete</string>
    <string name="activity_place_dialog_delete_negative">Cancel</string>
    <string name="activity_place_alias_hint">Set an alias</string>
    <string name="activity_place_search_hint">Search here</string>
    <string name="activity_place_custom_name">Custom name?</string>
    <string name="activity_place_custom_name_hint">Enter a name for this place</string>
    <string name="activity_settings_toolbar_title">Settings</string>
    <string name="settings_category_settings_title">Settings</string>
    <string name="settings_category_about_title">About</string>
    <string name="settings_manage_places_key">remindy_settings_manage_places</string>
    <string name="settings_manage_places_title">Manage Places</string>
    <string name="settings_manage_places_summary">Add or remove Places for Location-based Reminders</string>
    <string name="settings_show_location_based_reminder_in_new_tab_key">remindy_settings_show_location_based_reminder_in_new_tab</string>
    <string name="settings_show_location_based_reminder_in_new_tab_title">Show Location-based tasks</string>
    <string name="settings_show_location_based_reminder_in_new_tab_summary_false">In \'PROGRAMMED\' tab</string>
    <string name="settings_show_location_based_reminder_in_new_tab_summary_true">In their own tab</string>
    <string name="settings_date_format_key">remindy_settings_date_format</string>
    <string name="settings_date_format_title">Date Format</string>
    <string name="settings_time_format_key">remindy_settings_time_format</string>
    <string name="settings_time_format_title">Time Format</string>
    <string name="settings_trigger_minutes_before_notification_key">remindy_settings_trigger_minutes_before_notification</string>
    <string name="settings_trigger_minutes_before_notification_title">Show notifications..</string>
    <string name="settings_trigger_minutes_before_notification_summary_single">%1$d minute before time</string>
    <string name="settings_trigger_minutes_before_notification_summary">%1$d minutes before time</string>
    <string name="settings_backup_key">remindy_settings_backup</string>
    <string name="settings_backup_title">Backup data</string>
    <string name="settings_backup_summary">Backup app data to SD card</string>
    <string name="settings_restore_key">remindy_settings_restore</string>
    <string name="settings_restore_title">Restore data</string>
    <string name="settings_restore_summary">Restore app data from SD card</string>
    <string name="settings_about_key">remindy_settings_about</string>
    <string name="settings_about_title">About</string>
    <string name="settings_about_summary">Check app version, developer info&#8230;</string>
    <string name="remindy_settings_rate_key">remindy_settings_rate</string>
    <string name="remindy_settings_rate_title">Rate Remindy</string>
    <string name="remindy_settings_rate_summary">Like this app? A 5-star rating is gladly appreciated</string>
    <string name="remindy_settings_contact_key">remindy_settings_contact</string>
    <string name="remindy_settings_contact_title">Contact developer</string>
    <string name="remindy_settings_contact_summary">Having trouble using this app? Questions? Email me at alejandro@alejandrobicelis.com.ve</string>
    <string name="activity_reminder_toolbar_title">Simple Reminder</string>
    <string name="activity_reminder_title">Title</string>
    <string name="activity_reminder_title_hint">Enter a Title</string>
    <string name="activity_reminder_description">Description</string>
    <string name="activity_reminder_description_hint">Enter a Description</string>
    <string name="activity_reminder_category">Category</string>
    <string name="activity_reminder_simple_date_title">Date</string>
    <string name="activity_reminder_simple_date_hint">Enter a date</string>
    <string name="activity_reminder_simple_time_title">Time</string>
    <string name="activity_reminder_simple_time_hint">Enter a time</string>
    <string name="activity_reminder_simple_repeat_title">Repeat</string>
    <string name="activity_reminder_simple_repeat_interval_every">Every</string>
    <string name="activity_reminder_simple_repeat_interval_days">Day(s)</string>
    <string name="activity_reminder_simple_repeat_interval_weeks">Week(s)</string>
    <string name="activity_reminder_simple_repeat_interval_months">Month(s)</string>
    <string name="activity_reminder_simple_repeat_interval_years">Year(s)</string>
    <string name="activity_reminder_simple_repeat_end_until_date">Until</string>
    <string name="activity_reminder_simple_repeat_end_for_x_events_1">For</string>
    <string name="activity_reminder_simple_repeat_end_for_x_events_2">event(s)</string>
    <string name="activity_reminder_simple_exit_dialog_title">Go back?</string>
    <string name="activity_reminder_simple_exit_dialog_message">Go back and delete Reminder?</string>
    <string name="activity_reminder_simple_exit_dialog_positive">Yes</string>
    <string name="activity_reminder_simple_exit_dialog_negative">Cancel</string>
    <string name="activity_task_toolbar_title_new">New Task</string>
    <string name="activity_task_toolbar_title_edit">Edit Task</string>
    <string name="menu_activity_task_action_save">SAVE</string>
    <string name="activity_task_snackbar_error_saving">There was an error saving the Task</string>
    <string name="activity_task_snackbar_save_successful">Task saved successfully</string>
    <string name="activity_task_snackbar_error_no_title">Please add a title to the Task</string>
    <string name="fragment_edit_repeating_reminder_date_title">Date</string>
    <string name="fragment_edit_repeating_reminder_date_hint">Enter a date</string>
    <string name="fragment_edit_repeating_reminder_time_title">Time</string>
    <string name="fragment_edit_repeating_reminder_time_hint">Enter a time</string>
    <string name="fragment_edit_repeating_reminder_repeat_title">Repeat</string>
    <string name="fragment_edit_repeating_reminder_repeat_interval_every">Every</string>
    <string name="fragment_edit_repeating_reminder_repeat_interval_days">Day(s)</string>
    <string name="fragment_edit_repeating_reminder_repeat_end_until_date">Until</string>
    <string name="fragment_edit_repeating_reminder_repeat_end_for_x_events_1">For</string>
    <string name="fragment_edit_repeating_reminder_repeat_end_for_x_events_2">event(s)</string>
    <string name="dialog_edit_place_title">Edit Place</string>
    <string name="dialog_edit_place_alias_title">Alias</string>
    <string name="dialog_edit_place_address_title">Address</string>
    <string name="dialog_edit_place_cancel">CANCEL</string>
    <string name="dialog_edit_place_ok">OK</string>
</resources>