<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/icon_calendar"
                android:tint="@color/icons_enabled" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_edit_repeating_reminder_date_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:id="@+id/fragment_edit_repeating_reminder_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:focusable="false"
                android:hint="@string/fragment_edit_repeating_reminder_date_hint"
                android:inputType="none" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/icon_time"
                android:tint="@color/icons_enabled" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_edit_repeating_reminder_time_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:id="@+id/fragment_edit_repeating_reminder_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:focusable="false"
                android:hint="@string/fragment_edit_repeating_reminder_time_hint"
                android:inputType="none" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/icon_repeat"
                android:tint="@color/icons_enabled" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_edit_repeating_reminder_repeat_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Spinner
                android:id="@+id/fragment_edit_repeating_reminder_repeat_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:theme="@style/SpinnerStyle"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_edit_repeating_reminder_transitions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fragment_edit_repeating_reminder_repeat_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dp"
            android:orientation="vertical"
            android:visibility="visible">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_edit_repeating_reminder_repeat_interval_every" />

                <EditText
                    android:id="@+id/fragment_edit_repeating_reminder_repeat_interval"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="1" />

                <TextView
                    android:id="@+id/fragment_edit_repeating_reminder_repeat_type_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_edit_repeating_reminder_repeat_interval_days" />
            </LinearLayout>

            <Spinner
                android:id="@+id/fragment_edit_repeating_reminder_repeat_end_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:theme="@style/SpinnerStyle"
                />

            <LinearLayout
                android:id="@+id/fragment_edit_repeating_reminder_repeat_end_for_events_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_edit_repeating_reminder_repeat_end_for_x_events_1" />

                <EditText
                    android:id="@+id/fragment_edit_repeating_reminder_repeat_for_x_events"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_edit_repeating_reminder_repeat_end_for_x_events_2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_edit_repeating_reminder_repeat_end_until_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_edit_repeating_reminder_repeat_end_until_date" />

                <EditText
                    android:id="@+id/fragment_edit_repeating_reminder_repeat_until"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:focusable="false"
                    android:inputType="none" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
